--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-version: "3.8"
-
 services:
-  web:
+  frontend:
     image: nginx:stable-alpine
     ports:
       - 3000:80
     volumes:
-      - ./web:/usr/share/nginx/html
-      - ./web/nginx.conf:/etc/nginx/nginx.conf
-  python_proxy:
-    build: python_proxy
-    ports:
-      - 11433:5000
+      - ./frontend:/usr/share/nginx/html
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - backend
+  backend:
+    build: backend
     env_file:
       - .env
     volumes:
-      - ./python_proxy/model_mapping.json:/app/model_mapping.json
-      - ./saved_chats:/app/saved_chats
-      - ./tmp:/tmp
+      - backend_files:/tmp
+      - ./backend/src:/app/src
+    ports:
+      - 11432:5000
+    depends_on:
+      - db
+      - ollama
   db:
     image: postgres:13
     env_file:
@@ -26,5 +28,22 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  ollama:
+    image: ollama/ollama:latest
+    ports:
+      - 11434:11434
+    env_file:
+      - .env
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: [ gpu ]
+    volumes:
+      - ollama_models:/root/.ollama
+
 volumes:
   postgres_data:
+  backend_files:
+  ollama_models:
