--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   frontend:
     image: nginx:stable-alpine
-    ports:
-      - 3000:80
+    # ports:
+    #   - 3000:80
     volumes:
       - ./frontend:/usr/share/nginx/html
       - ./frontend/nginx.conf:/etc/nginx/nginx.conf
@@ -28,6 +28,15 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  proxy:
+    image: nginx:1.13-alpine
+    ports:
+      - 3000:80
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
   ollama:
     image: ollama/ollama:latest
     ports:
