--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -9,7 +9,7 @@ events {
 http {
     include mime.types;
     default_type application/octet-stream;
-    client_max_body_size 100m;
+    client_max_body_size 1g;
 
     sendfile on;
 
@@ -18,9 +18,9 @@ http {
     server {
         listen 80;
         server_name localhost;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+        proxy_read_timeout 3000;
+        proxy_connect_timeout 3000;
+        proxy_send_timeout 3000;
 
         location ~* /openapi.json {
             add_header "Access-Control-Allow-Origin" *;
@@ -51,6 +51,4 @@ http {
             proxy_pass http://frontend:80;
         }
     }
-
-
 }
