It should work\nBUT I SHOULDN't ARGHGHG

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - backend
   backend:
     build: backend
+    environment:
+      - PYTHONUNBUFFERED=1
     env_file:
       - .env
     volumes:
